@@ -2,6 +2,8 @@ Nutch Change Log
   
 Nutch Current Development 1.11-SNAPSHOT
 
+* NUTCH-2084 SegmentMerger to report missing input dirs (markus)
+
 * NUTCH-2083 Implement functionality to shadow nutch-selenium-grid-plugin from Mo Omer (lewismc)
 
 * NUTCH-2049 Upgrade to Hadoop 2.4 (lewismc)
